payment sestem integret

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://i.pinimg.com/564x/22/48/05/2248058d5672c6f41b615761feec4c3a.jpg" />
      <!-- aos animation -->
      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Summer Camp</title>
+    <title>Language Learner</title>
   </head>
   <body>
     <div id="root"></div>
