add some width for some section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="https://i.pinimg.com/564x/22/48/05/2248058d5672c6f41b615761feec4c3a.jpg" />
      <!-- aos animation -->
      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+     <!-- Google Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&family=Andada+Pro:wght@400;500;600;700;800&family=Tinos:ital@1&display=swap" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Language Learner</title>
   </head>
