--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
      <!-- Google Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&family=Andada+Pro:wght@400;500;600;700;800&family=Tinos:ital@1&display=swap" rel="stylesheet">
+
+<link
+  href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
+  rel="stylesheet"
+/>
+
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Language Learner</title>
