--- a/index.html
+++ b/index.html
@@ -2,21 +2,79 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://i.pinimg.com/564x/22/48/05/2248058d5672c6f41b615761feec4c3a.jpg" />
-     <!-- aos animation -->
-     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-     <!-- Google Fonts -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-<link
-  href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
-  rel="stylesheet"
-/>
-
-
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://i.pinimg.com/564x/22/48/05/2248058d5672c6f41b615761feec4c3a.jpg" />
+    <!-- aos animation -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Language Learner</title>
+
+    <!-- ✅ Preconnect to external resources -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- ✅ Load fonts asynchronously (non-blocking) -->
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'" />
+    <noscript>
+      <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+        rel="stylesheet" />
+    </noscript>
+
+   <!-- ✅ Critical inline styles -->
+    <style>
+        /* Prevent FOUC (Flash of Unstyled Content) */
+        body {
+           font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        p {
+
+    color: #3c3f3e;
+    font-size: 1rem;
+    line-height: 35px;
+    font-family: 'Tinos', serif;
+    font-weight: 600;
+}
+        h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-size: 2rem;
+    line-height: 50px;
+    font-family: 'Andada Pro', serif;
+    color: #0a2b1e;
+    font-weight: 600;
+}
+        /* Loading state */
+        #root:empty::before {
+            content: '';
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            width: 48px;
+            height: 48px;
+            margin: -24px 0 0 -24px;
+            border: 4px solid #e5e7eb;
+            border-top-color: #17bf9e;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+        
+        @keyframes spin {
+            to { transform: rotate(360deg); }
+        }
+    </style>
+
   </head>
   <body>
     <div id="root"></div>
