--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
   <body>
     <div id="root">
       <!-- Initial loading - will be replaced by React -->
-      <div
-        className="hidden"
+    {  <div
         style="
           display: flex;
           align-items: center;
@@ -102,7 +101,7 @@
           </h3>
           <p style="font-size: 14px; color: #6b7280">Preparing your courses</p>
         </div>
-      </div>
+      </div>}
     </div>
 
     <script type="module" src="/src/main.jsx"></script>
