add a fuction for remove laoder from dashborad

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <body>
     <div id="root">
       <!-- Initial loading - will be replaced by React -->
-     <!-- <div
+     <div  id="initial-loader"
         style="
           display: flex;
           align-items: center;
@@ -101,7 +101,7 @@
           </h3>
           <p style="font-size: 14px; color: #6b7280">Preparing your courses</p>
         </div>
-      </div> -->
+      </div>
     </div>
 
     <script type="module" src="/src/main.jsx"></script>
